objects/EUS_EndUserSupport__c.object
<CustomObject>
    <description>Case Management used to create and follow issues.</description>
    <fields>
        <fullName>Acknowledgement_Time__c</fullName>
        <description>This field is to update the acknowledge time in days.</description>
        <label>Acknowledgement Time (in hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analysis__c</fullName>
        <description>This field provides an analysis of the problem.</description>
        <label>Analysis</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Submitted For Approval</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssignToPremierSupport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox needs to be selected by the Champion in oder to send the request to Premier Support</description>
        <label>Assign To Premier Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BusinessRequirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>201207 - Business requirement field created in order to make a link between the business requirement and the End User Support</description>
        <label>Business Requirement</label>
        <referenceTo>Business_Requirement__c</referenceTo>
        <relationshipLabel>End User Support</relationshipLabel>
        <relationshipName>End_User_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>All Processes</fullName>
                </value>
                <value>
                    <fullName>bFO Offer life Cycle Management</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>Connect</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>DMT</fullName>
                </value>
                <value>
                    <fullName>Field Services</fullName>
                </value>
                <value>
                    <fullName>I2P</fullName>
                </value>
                <value>
                    <fullName>IPO Strategic Program</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Master Data &amp; Referentials</fullName>
                </value>
                <value>
                    <fullName>Panda / Content</fullName>
                </value>
                <value>
                    <fullName>PRM</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Capacity__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Access to GMR</fullName>
                </value>
                <value>
                    <fullName>Account &amp; Contact Management</fullName>
                </value>
                <value>
                    <fullName>Actions</fullName>
                </value>
                <value>
                    <fullName>Back Office Connector</fullName>
                </value>
                <value>
                    <fullName>bFO PRM Portal</fullName>
                </value>
                <value>
                    <fullName>Business Risk Escalation</fullName>
                </value>
                <value>
                    <fullName>Calendar Anything</fullName>
                </value>
                <value>
                    <fullName>CAP/SFE Management</fullName>
                </value>
                <value>
                    <fullName>Cascading Milestone</fullName>
                </value>
                <value>
                    <fullName>Case Management</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Code</fullName>
                </value>
                <value>
                    <fullName>Coin bFO</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Connect Reports &amp; Dashboards</fullName>
                </value>
                <value>
                    <fullName>Contents &amp; Libraries</fullName>
                </value>
                <value>
                    <fullName>CTI</fullName>
                </value>
                <value>
                    <fullName>customer Knowledge Management(cKM)</fullName>
                </value>
                <value>
                    <fullName>Customer Major Issue</fullName>
                </value>
                <value>
                    <fullName>Customer Safety Issue</fullName>
                </value>
                <value>
                    <fullName>Customer Visit</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>Data Model</fullName>
                </value>
                <value>
                    <fullName>Decisions</fullName>
                </value>
                <value>
                    <fullName>Dispatch Console</fullName>
                </value>
                <value>
                    <fullName>Email to Case</fullName>
                </value>
                <value>
                    <fullName>End User Support Ticket</fullName>
                </value>
                <value>
                    <fullName>Global Milestone</fullName>
                </value>
                <value>
                    <fullName>Global Program</fullName>
                </value>
                <value>
                    <fullName>IB Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChangeRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>End User Support</relationshipLabel>
        <relationshipName>End_User_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClosureAcceptedByCreator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closure Accepted By Creator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CorrectedIn__c</fullName>
        <description>Instance on which the problem has been corrected.</description>
        <inlineHelpText>Instance on which the problem has been corrected.</inlineHelpText>
        <label>Corrected In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Int1</fullName>
                </value>
                <value>
                    <fullName>RITEInt1</fullName>
                </value>
                <value>
                    <fullName>RITEInt2</fullName>
                </value>
                <value>
                    <fullName>TRA01</fullName>
                </value>
                <value>
                    <fullName>TRAIN02</fullName>
                </value>
                <value>
                    <fullName>Quick01</fullName>
                </value>
                <value>
                    <fullName>Quick02</fullName>
                </value>
                <value>
                    <fullName>Quick03</fullName>
                </value>
                <value>
                    <fullName>Quick04</fullName>
                </value>
                <value>
                    <fullName>Quick05</fullName>
                </value>
                <value>
                    <fullName>Quick06</fullName>
                </value>
                <value>
                    <fullName>Quick07</fullName>
                </value>
                <value>
                    <fullName>Quick08</fullName>
                </value>
                <value>
                    <fullName>Quick09</fullName>
                </value>
                <value>
                    <fullName>Quick10</fullName>
                </value>
                <value>
                    <fullName>Quick11</fullName>
                </value>
                <value>
                    <fullName>Quick12</fullName>
                </value>
                <value>
                    <fullName>Quick13</fullName>
                </value>
                <value>
                    <fullName>Quick14</fullName>
                </value>
                <value>
                    <fullName>Quick15</fullName>
                </value>
                <value>
                    <fullName>Quick16</fullName>
                </value>
                <value>
                    <fullName>Quick17</fullName>
                </value>
                <value>
                    <fullName>Quick18</fullName>
                </value>
                <value>
                    <fullName>Quick19</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CorrectionFrame__c</fullName>
        <description>Timeframe when the problem needs to be corrected.</description>
        <label>Correction Frame</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASAP</fullName>
                </value>
                <value>
                    <fullName>Monthly Release</fullName>
                </value>
                <value>
                    <fullName>Quaterly Release</fullName>
                </value>
                <value>
                    <fullName>SFDC Release</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CorrectionPlanning__c</fullName>
        <description>Estimated date of correction.</description>
        <label>Correction Planning</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_By_User_s_Business__c</fullName>
        <description>The Business Unit of the user that created the End User Support request</description>
        <formula>TEXT( CreatedBy.UserBusinessUnit__c )</formula>
        <label>Created By User&apos;s Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_User_s_Country__c</fullName>
        <description>Country of the user that created the End User Support Ticket</description>
        <formula>TEXT( CreatedBy.Country__c )</formula>
        <label>Created By User&apos;s Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Country__c</fullName>
        <description>The country of the creator of the ticket</description>
        <formula>TEXT(CreatedBy.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criticality__c</fullName>
        <description>Field previously called &quot;Criticality&quot;.</description>
        <inlineHelpText>1 – High
2 – Medium
3 – Low</inlineHelpText>
        <label>Gravity</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <color>#FF0000</color>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <color>#FF9900</color>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <color>#FFFF66</color>
                    <default>true</default>
                    <label>3</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <color>#DDDDDD</color>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DaysSinceCreation__c</fullName>
        <formula>IF( ( ISPICKVAL( Status__c ,&quot;Closed&quot;)), ROUND( CloseDate__c - DATEVALUE(CreatedDate), 0), ROUND((NOW() - CreatedDate),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Describe issue, specify steps to reproduce and expected behaviour</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DetectedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who detected the problem</description>
        <label>Detected by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EndUserSupport</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>October2012-hidden and automatically ticked when the status is equal “Duplicateʺ</description>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                    <default>true</default>
                    <label>Production</label>
                </value>
                <value>
                    <fullName>Pre-Production (Int1)</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EscalationLevel__c</fullName>
        <label>Escalation Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Level 2 - bridge Front Office Entity Lead</fullName>
                </value>
                <value>
                    <fullName>Level 2 - Data Steward</fullName>
                </value>
                <value>
                    <fullName>Level 2 - Delegated Admin</fullName>
                </value>
                <value>
                    <fullName>Level 2 - Local EUS</fullName>
                </value>
                <value>
                    <fullName>Level 2 - Process Advocates</fullName>
                </value>
                <value>
                    <fullName>Level 3 - Change Central Team</fullName>
                </value>
                <value>
                    <fullName>Level 3 - Data Administration</fullName>
                </value>
                <value>
                    <fullName>Level 3 - External Suppliers</fullName>
                </value>
                <value>
                    <fullName>Level 3 - Network Team</fullName>
                </value>
                <value>
                    <fullName>Level 3 - Process Owner</fullName>
                </value>
                <value>
                    <fullName>Level 3 - SDH</fullName>
                </value>
                <value>
                    <fullName>Level 3 - Solution Team</fullName>
                </value>
                <value>
                    <fullName>Level 4 - salesforce.com Expertise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EstimatedWorkloadManDays__c</fullName>
        <description>Number of Man Days estimated to fix the problem.</description>
        <label>Estimated workload (Man/days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpectedClosedDate__c</fullName>
        <description>Date to which the request is expected to be closed.</description>
        <label>Expected Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpectedStartDate__c</fullName>
        <label>Expected Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpertiseTimeEstimated__c</fullName>
        <inlineHelpText>In hours</inlineHelpText>
        <label>Expertise Time (estimated)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpertiseTimeSpent__c</fullName>
        <inlineHelpText>in hours</inlineHelpText>
        <label>Expertise Time (Spent)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpertiseType__c</fullName>
        <label>Expertise Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Functional</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IfNoWhy__c</fullName>
        <label>If No, why?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ImpactAnalysis__c</fullName>
        <label>Impact Analysis</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InformationMessage__c</fullName>
        <description>This field displays an image (warning message) to inform the EUS creator to change the EUS owner.</description>
        <formula>IMAGE(&quot;/resource/STR017_WarningMessageEUS&quot;,&quot;&quot;,21, 260)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Actions</fullName>
                </value>
                <value>
                    <fullName>Commercial Action Plan (SFE)</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Decisions</fullName>
                </value>
                <value>
                    <fullName>Dispatch Console</fullName>
                </value>
                <value>
                    <fullName>Issue &amp; Risk Management</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Opportunity Notification</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Project Request</fullName>
                </value>
                <value>
                    <fullName>Revenue Storm</fullName>
                </value>
                <value>
                    <fullName>Services Event</fullName>
                </value>
                <value>
                    <fullName>Service Team/Technician</fullName>
                </value>
                <value>
                    <fullName>Work Order</fullName>
                </value>
                <value>
                    <fullName>Work Order Notification</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PartnerName__c</fullName>
        <label>Partner Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Middleware</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Non bFO Application Support Teams</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PartnerNumber__c</fullName>
        <label>Partner Ticket Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlannedClosedDate__c</fullName>
        <label>Planned Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PostponeReason__c</fullName>
        <label>Postpone Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PremiumSupportCase__c</fullName>
        <description>Reference of the cased opened with Premier Support.</description>
        <label>Premium Support Case</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Not defined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrivilegeRequest__c</fullName>
        <label>Privilege Request</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bypass Validation Rule (All)</fullName>
                </value>
                <value>
                    <fullName>Bypass Workflow (All)</fullName>
                </value>
                <value>
                    <fullName>Bypass Trigger (Specify which trigger)</fullName>
                </value>
                <value>
                    <fullName>Bypass Application Freeze</fullName>
                </value>
                <value>
                    <fullName>System Administrator Profile</fullName>
                </value>
                <value>
                    <fullName>Usage of Dataloader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedEndUserSupport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related End User Support</label>
        <referenceTo>EUS_EndUserSupport__c</referenceTo>
        <relationshipLabel>Related End User Support</relationshipLabel>
        <relationshipName>EndUserSupport</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReleasePhase__c</fullName>
        <label>Release Phase</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SOWType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Analyze</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Validate</fullName>
                </value>
                <value>
                    <fullName>Promotion to Production</fullName>
                </value>
                <value>
                    <fullName>First-In</fullName>
                </value>
                <value>
                    <fullName>Run</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReleaseRelease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>End User Support</relationshipLabel>
        <relationshipName>End_User_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReleaseType__c</fullName>
        <label>Release Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SOWType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Hot Fix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReproducedIn__c</fullName>
        <description>Instance in which the problem has been reproduced.</description>
        <inlineHelpText>Instance in which the problem has been reproduced.</inlineHelpText>
        <label>Reproduced In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Int1</fullName>
                </value>
                <value>
                    <fullName>RITEInt1</fullName>
                </value>
                <value>
                    <fullName>RITEInt2</fullName>
                </value>
                <value>
                    <fullName>TRA01</fullName>
                </value>
                <value>
                    <fullName>TRAIN02</fullName>
                </value>
                <value>
                    <fullName>Quick01</fullName>
                </value>
                <value>
                    <fullName>Quick02</fullName>
                </value>
                <value>
                    <fullName>Quick03</fullName>
                </value>
                <value>
                    <fullName>Quick04</fullName>
                </value>
                <value>
                    <fullName>Quick05</fullName>
                </value>
                <value>
                    <fullName>Quick06</fullName>
                </value>
                <value>
                    <fullName>Quick07</fullName>
                </value>
                <value>
                    <fullName>Quick08</fullName>
                </value>
                <value>
                    <fullName>Quick09</fullName>
                </value>
                <value>
                    <fullName>Quick10</fullName>
                </value>
                <value>
                    <fullName>Quick11</fullName>
                </value>
                <value>
                    <fullName>Quick12</fullName>
                </value>
                <value>
                    <fullName>Quick13</fullName>
                </value>
                <value>
                    <fullName>Quick14</fullName>
                </value>
                <value>
                    <fullName>Quick15</fullName>
                </value>
                <value>
                    <fullName>Quick16</fullName>
                </value>
                <value>
                    <fullName>Quick17</fullName>
                </value>
                <value>
                    <fullName>Quick18</fullName>
                </value>
                <value>
                    <fullName>Quick19</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestType__c</fullName>
        <description>Field to categorize the type of end user support request</description>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>salesforce.com Expertise</fullName>
                </value>
                <value>
                    <fullName>Service Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request_work_in_progress__c</referenceTo>
        <relationshipLabel>End User Support (Request)</relationshipLabel>
        <relationshipName>End_User_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestworkinprogress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request (work in progress)</label>
        <referenceTo>Request_work_in_progress__c</referenceTo>
        <relationshipLabel>End User Support</relationshipLabel>
        <relationshipName>EndUserSupport</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResolutionTime__c</fullName>
        <formula>(UnderChampionValidationDate__c - StartingTime__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution Time (in hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDCAnalysis__c</fullName>
        <label>SFDC Analysis / Diagnostic</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDCProposedSolutionImpact__c</fullName>
        <label>SFDC Proposed Solution Impact</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDCProposedSolution__c</fullName>
        <label>SFDC Proposed Solution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SOWType__c</fullName>
        <label>SOW Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Governance &amp; Vision</fullName>
                </value>
                <value>
                    <fullName>Micro Project</fullName>
                </value>
                <value>
                    <fullName>Program Engagement</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SolutionAccepted__c</fullName>
        <label>Solution accepted ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <default>true</default>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>StartingTime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Starting Time</label>
        <type>DateTime</type>
    </fields>
</CustomObject>